# Radio_Internet_RPiZero_rust

./: .gitignore  Cargo.toml  README.md  build_for_rpi.sh  emisoras.m3u  run_cvlc.sh
src/: main.rs
