[package]
name = "radio_player"
version = "5.4.3"
edition = "2021"
authors = ["Angel <angel@example.com>"]
description = "Radio player con control GPIO y display LCD1602 para Raspberry Pi Zero - sin parpadeo"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
rppal = "0.17.1"
libc = "0.2.180"
i2c-linux = "0.1"
bitflags = "2.0"
serde = { version = "1.0", features = ["derive"] }